# lm-logging-api

./: .gitignore  Cargo.toml  README.md
src/: api_doc.rs  custom_middleware.rs  database.rs  main.rs  routes.rs
src/routes/: health.rs  lm.rs
src/routes/lm/: chat_role.rs  log_record.rs  prompt.rs
