[package]
name = "lm-logging-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
chrono = "0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
