[package]
name = "lm-logging-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
serde_json = "1.0.145"
