[package]
name = "lm-logging-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "time"] }
time = { version = "0", features = ["std", "serde", "parsing", "formatting", "macros"] }
tokio = { version = "1", features = ["full"] }
utoipa = { version = "5", features = ["axum_extras", "time"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
